# panoramix

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml  zephyr-linux.code-workspace
.github/workflows/: build.yml
apps/: flash_log_error.txt
apps/asterics/: CMakeLists.txt  README.md  prj.conf
apps/asterics/src/: main.c  main_led_gem.c
apps/demo_public/: CMakeLists.txt  prj.conf
apps/demo_public/src/: main_led_gem.c
apps/obelics/: CMakeLists.txt  app.yaml  nucleo_h723zg.overlay  prj.conf
apps/obelics/src/: FatFS.md  LoRa sx1261.md  LoRa sx1276.md  README.md  SDCard.md  main.c  sd_card.c  sd_card.h  udp_client.c  udp_client.h  ws2812_bitbang.c  ws2812_bitbang.h
apps/rf_board/: CMakeLists.txt  prj.conf
apps/rf_board/src/: lora_send.txt  main.c  test.txt
boards/others/asterics/: Kconfig.asterics  asterics - Copia.dts.txt  asterics copy.dts.txt  asterics.dts  asterics.dts.txt  board.cmake  board.yml
boards/others/rf_board/: Kconfig.rf_board  board.cmake  board.yml  rf_board.dts  rf_board.dts.txt
cmake/: include_custom_modules.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/devices/: neopixel.c
drivers/dts/bindings/: vendor-prefixes.txt
drivers/dts/bindings/led_strip/: panoramix,ws2812-gpio-stm32.yaml
drivers/gnss/: CMakeLists.txt  Kconfig  README.md  gnss_u_blox_m10.c  gnss_u_blox_m10_i2c.c  gnss_u_blox_m10_i2c.h  gps.h
drivers/gnss/u_blox_m10/: CMakeLists.txt  Kconfig  README.md  gnss_u_blox_m10.c  gnss_u_blox_m10.h
drivers/led_strip/: CMakeLists.txt  Kconfig  ws2812_bitbang.md  ws2812_gpio_stm32.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/h3lis/: CMakeLists.txt  Kconfig  h3lis.c  h3lis.h  h3lisSpi.c  utils.h
drivers/sensor/hsc/: CMakeLists.txt  Kconfig  hsc.c  hsc.h
drivers/sensor/ina219-rtio/: CMakeLists.txt  Kconfig  ina219.c  ina219.h  ina219_bus.c  ina219_bus.h
drivers/sensor/ms5611/: CMakeLists.txt  Kconfig  README.md  ms5611.c  ms5611.h  ms5611_async.md  ms5611_bus.c  ms5611_bus.h
drivers/servo/: CMakeLists.txt  Kconfig
drivers/servo/generic_pwm/: CMakeLists.txt  Kconfig  servo_pwm.c
drivers/servo/st3215/: CMakeLists.txt  Kconfig  README.md  st3215.c  st3215.h
drivers/zephyr/: module.yml
dts/bindings/devices/: worldsemi,ws2812-gpio.yaml
dts/bindings/gnss/: u-blox,m10.yaml
dts/bindings/led_strip/: worldsemi,ws2812-gpio-stm32.yaml
dts/bindings/sensor/: ams,ms5611.yaml  st,h3lis331dl.yaml  ti,ina219-rtio.yaml
dts/bindings/servo/: generic,pwm-servo.yaml  waveshare,st3215.yaml
include/zephyr/drivers/: servo.h
modules/: CMakeLists.txt  Kconfig  modules.cmake
modules/display/: CMakeLists.txt  Kconfig
modules/display/include/: display.h
modules/display/src/: display.c
modules/display/zephyr/: module.yml
modules/file_logger/: CMakeLists.txt  Kconfig
modules/file_logger/include/: file_logger.h
modules/file_logger/src/: file_logger.c
modules/file_logger/zephyr/: module.yml
modules/lib/sound/: CMakeLists.txt  Kconfig  module.yml
modules/lib/sound/zephyr/: module.yml
modules/sound/: CMakeLists.txt  Kconfig  README.md
modules/sound/include/: sound.h
modules/sound/src/: sound.c
modules/sound/zephyr/: module.yml
modules/udp_client/: CMakeLists.txt  Kconfig  udp_client.c  udp_client.h
modules/udp_client/zephyr/: module.yml
modules/zephyr/: module.yml
zephyr/: module.yml
